# FaceAnalyze2

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: DEMO_GRADIO.md  DEV_GUIDE.md  FRONTEND_CHANGES_V3.md  FRONTEND_DYNAMIC_ANALYSIS.md  FRONTEND_INTEGRATION.md  SPEC.md
docs/agents/: 글글이_docs.md  달달이_metrics.md  무돌이_setup.md  무무치_director.md  분석이_review.md  중중이_qa.md  특특이_viewer.md  헙헙이_github.md
docs/agents/prompts/: 무돌이_setup_prompt.md  중중이_qa_prompt.md  특특이_viewer_prompt.md
docs/conversation_logs/: director_log.md
models/: README.md
packaging/: build.ps1  faceanalyze2.spec  test_exe.ps1
src/faceanalyze2/: __init__.py  __main__.py  cli.py  config.py  runtime_paths.py
src/faceanalyze2/analysis/: __init__.py  alignment.py  alignment_viz.py  metrics.py  metrics_base.py  segmentation.py
src/faceanalyze2/api/: __init__.py  dynamic_analysis.py
src/faceanalyze2/demo/: __init__.py  gradio_app.py
src/faceanalyze2/desktop/: __init__.py  app.py  image_utils.py  input_panel.py  main_window.py  pipeline_worker.py  results_panel.py
src/faceanalyze2/io/: __init__.py  video_reader.py
src/faceanalyze2/landmarks/: __init__.py  mediapipe_face_landmarker.py  provider_base.py
src/faceanalyze2/roi/: __init__.py  indices.py
src/faceanalyze2/viz/: __init__.py  (+2 more)
tests/: test_alignment.py  test_alignment_viz.py  test_cli.py  test_dynamic_analysis.py  test_gradio_demo_helpers.py  test_guide_status.py  test_landmark_extraction.py  test_metrics.py  test_motion_viewer.py  test_pair_roi_indices.py  test_segmentation.py  test_video_reader.py
