[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceanalyze2"
version = "0.1.0"
description = "Scaffold for quantitative facial palsy analysis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "FaceAnalyze2 Contributors" }
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
  "numpy>=1.26.0",
  "opencv-python>=4.10.0",
  "mediapipe>=0.10.14",
  "matplotlib>=3.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[project.scripts]
faceanalyze2 = "faceanalyze2.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
